增强 Payload Processing 功能（重新启用合并请求选项、新增条件检查规则）；优化数据看板 From 字段的内容展示